--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,12 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "bacon/bacon-qr-code": "^3.0",
         "inertiajs/inertia-laravel": "^2.0",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
+        "pragmarx/google2fa": "^8.0",
         "spatie/laravel-permission": "^6.18",
         "tightenco/ziggy": "^2.0"
     },
