--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vue": "^3.4.0"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-free": "^6.7.2"
+        "@fortawesome/fontawesome-free": "^6.7.2",
+        "vue3-toastify": "^0.2.8"
     }
 }
