--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
+        "owen-it/laravel-auditing": "^14",
         "pragmarx/google2fa": "^8.0",
         "spatie/laravel-permission": "^6.18",
         "tightenco/ziggy": "^2.0"
