--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.7.2",
+        "date-fns": "^4.1.0",
         "vue3-toastify": "^0.2.8"
     }
 }
