--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.7.2",
+        "chart.js": "^4.5.0",
         "date-fns": "^4.1.0",
+        "recharts": "^2.15.4",
+        "vue-chartjs": "^5.3.2",
         "vue3-toastify": "^0.2.8"
     }
 }
